Add New Styles: Box model, Box-sizing & Inline-block

--- a/recipes/belouras.html
+++ b/recipes/belouras.html
@@ -9,22 +9,31 @@
   </head>
   <body>
     <main>
-      <h1><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo"><a href="../index.html">Odin Recipes</a></h1>
-      <h2>Belouras</h2>
+      <article class="to-center">
+        <h1>
+          <a href="../index.html">
+            <img class="img-logo" 
+            src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png"
+            alt="odin project logo">Odin Recipes</a>
+        </h1>
+      </article>
+          <h2 class="sub-title">Belouras</h2>
       <img class="img-recipe" src="https://i.pinimg.com/564x/c7/26/51/c7265119c813d9b54d556bef22d8763a.jpg"
       alt="Breadboard with a knife and 3 Belouras on top, one of which is already sliced. Belouras looks like a loaf of bread.">
-      <h3>Description</h3>
-      <p>Beloura, bolacho, farinhato, pilouco ou bica are the different names given to this delicacy from traditional 
+      <article class="description desc-bele">
+        <h3>Description</h3>
+        <p>Beloura, bolacho, farinhato, pilouco ou bica are the different names given to this delicacy from traditional 
           Portuguese cuisine, more specifically from the Minho region in northern 
           Portugal.</p>
-      <p>Belouras are made from wheat, maize and rye flour, 
-          mixed with pig's blood and seasoned with strong spices. 
-          They should always be cut into thin slices, fried and served immediately, 
-          piping hot.</p>
-      <p>Traditionally, belouras are part of the recipe for 
-          <a href="./rojoes_a_moda_do_minho.html">Rojões à moda do Minho</a>,
-          but they are an excellent accompaniment to other dishes or appetisers.</p>
-      <h3>Ingredients</h3>
+          <p>Belouras are made from wheat, maize and rye flour, 
+            mixed with pig's blood and seasoned with strong spices. 
+            They should always be cut into thin slices, fried and served immediately, 
+            piping hot.</p>
+            <p>Traditionally, belouras are part of the recipe for 
+              <a href="./rojoes_a_moda_do_minho.html">Rojões à moda do Minho</a>,
+              but they are an excellent accompaniment to other dishes or appetisers.</p>
+      </article>
+      <h3  class="ingredients">Ingredients</h3>
       <ul>
           <li>1 clove of garlic</li>
           <li>1 orange leaf</li>
@@ -39,7 +48,7 @@
           <li>pingue (fat from cooking the rojões)</li>
           <li>salt, pepper and cumin as needed</li>
       </ul>
-      <h3>Steps</h3>
+      <h3  class="steps">Steps</h3>
       <ol>
           <li>Mix the flours and sieve.</li>
           <li>Knead them with the baker's yeast, chilli, cumin, blood and enough meat cooking water to make a stiff dough.</li>
