--- a/recipes/carne_a_valenciana.html
+++ b/recipes/carne_a_valenciana.html
@@ -9,22 +9,31 @@
   </head>
   <body>
     <main>
-      <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
-    <h2>Carne de Porco à Alentejana</h2>
+      <article class="to-center">
+      <h1>
+        <a href="../index.html">
+          <img class="img-logo" 
+          src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png"
+          alt="odin project logo">Odin Recipes</a>
+      </h1>
+    </article>
+      <h2 class="sub-title">Carne de Porco à Alentejana</h2>
     <img class="img-recipe" src="https://i.pinimg.com/564x/83/a5/99/83a59995a7ea7d98ec7f6a97852b76c9.jpg" alt="A greyish-blue dish with diced pork, accompanied by diced fried potatoes and boiled clams, 
     with a light sauce at the bottom of the dish and a light sprinkling of parsley on top.">
-    <h3>Description</h3>
-    <p>Few dishes sum up the flavours of the south of Portugal quite as well as 
+    <article class="description desc-vale">
+      <h3>Description</h3>
+      <p>Few dishes sum up the flavours of the south of Portugal quite as well as 
         Carne de Porco à Alentejana.
         You’ll find the dish listed on menus across the Algarve and Alentejo and obscured 
         from its name is the wonderful addition of local clams. 
         Intriguing and unusual for lots of cuisines, this is a dish that combines seafood and pork perfectly. Despite its name, it’s believed to have been invented somewhere in the Algarve. The Alentejana refers to some of the best pork available in Portugal, which would have originally been included in the dish. Although, just about any pork is fine, there’s no need to hunt for the famed Alentejo Pork if you’re not nearby. What else is in the dish? It’s the typical Southern Portuguese marinade of white wine, garlic, paprika, and bay leaf. If it’s familiar to you, that’s because it’s used in a surprising number of dishes,
         most famously the southern variant of the Bifana.</p>
-    <h3>Ingredients <span>(serves 2 people)</span></h3>
+    </article>
+    <h3 class="ingredients">Ingredients <span>(serves 2 people)</span></h3>
     <ul>
         <li>500g pork loin (with some fat but not much)</li>
         <li>2 garlic cloves – crushed</li>
-        <li>2tsp massa de pimentão (Pepper paste, widely available in Portuguese supermarkets)</li>
+        <li>2tsp massa de pimentão <br>(Pepper paste, widely available in Portuguese supermarkets)</li>
         <li>2 bay leaves</li>
         <li>1/2tsp smoked paprika</li>
         <li>400ml of a good white wine</li>
@@ -34,7 +43,7 @@
         <li>500g clams</li>
         <li>Fresh cilantro</li>
     </ul>
-    <h3>Steps</h3>
+    <h3  class="steps">Steps</h3>
     <ol>
         <li>Cut the pork into approximately 3cm cubes and place in a bowl or deep dish.</li>
         <li>Add the wine, crushed garlic cloves, bay leaves, pepper paste and paprika to the dish.</li>
