--- a/recipes/pasta_bolonhesa.html
+++ b/recipes/pasta_bolonhesa.html
@@ -9,17 +9,32 @@
   </head>
   <body>
     <main>
+    <article class="to-center">
       <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
-      <h2>Pasta Bolognese</h2>
+    </article>
+      <h2 class="sub-title">Pasta Bolognese</h2>
       <img class="img-recipe" src="https://i.pinimg.com/564x/49/ca/e2/49cae2a7cc06f85269b350de24f4394c.jpg"
       alt="grey plate with bolognese pasta and a few basil leaves on top.">
-      <h2>Description</h2>
-      <p>Pasta Bolognese is a classic Italian dish that is actually very easy to make at home! 
+      <article class="description desc-bolo">
+        <h3>Description</h3>
+        <p>Pasta Bolognese is a classic Italian dish that is actually very easy to make at home! 
           With a handful of ingredients and 30 minutes of time, 
           you'll have a complex sauce that's perfect over pasta and can even be used in 
-          other Italian dishes, such as <a href="./lasagna.html">lasagne</a>.</p>
+          other Italian dishes, such as <a href="./lasagna.html">lasagne</a>.
+          <br><br>
+          This hearty dish features perfectly cooked pasta, typically fettuccine or tagliatelle, generously coated in a rich and savory Bolognese sauce. 
+          The sauce is a slow-cooked mixture of ground meats, often a blend of beef and pork, simmered in a robust tomato base with onions, garlic, 
+          and a touch of red wine. The sauce is thick and flavorful,
+          with the meat tender and infused with the depth of the tomatoes and the earthiness of finely chopped carrots and celery.
+
+          A light sprinkling of freshly grated Parmesan cheese adds a sharp, salty finish, melting slightly into the warm sauce. 
+          The dish is garnished with fresh basil or parsley, adding a touch of color and a burst of fresh flavor. 
+          The aroma of simmering tomatoes, herbs, and wine fills the kitchen, making it impossible to resist. 
+          This Pasta Bolognese offers a comforting, authentic taste of Italy with each bite, perfect for a satisfying meal any day of the week.
+        </p>
+        </article>
           
-      <h2>Ingredients</h2>
+      <h2 class="ingredients">Ingredients</h2>
       <ul>
           <li>1 tablespoon olive oil</li>
           <li>125g pancetta finely diced</li>
@@ -38,7 +53,7 @@
           <li>1/4 cup basil leaves thinly sliced</li>
       </ul>
   
-      <h2>Steps</h2>
+      <h2  class="steps">Steps</h2>
       <ol>
           <li>Heat the olive oil in a large pot over medium heat. Add the pancetta and cook for 4-5 minutes until browned and crispy.</li>
           <li>Add the ground beef to the pan and season with salt and pepper to taste. Cook for 5 minutes, breaking up the beef into small pieces with a spatula.</li>
