--- a/recipes/pasta_carbornara.html
+++ b/recipes/pasta_carbornara.html
@@ -9,19 +9,24 @@
   </head>
   <body>
     <main>
-        <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
-        <h2>Pasta Carbonara</h2>
+        <article class="to-center">
+            <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
+        </article>
+        <h2 class="sub-title">Pasta Carbonara</h2>
         <img  class="img-recipe" src="https://i.pinimg.com/564x/c1/14/69/c114695e0ed643baec4ac211f9bce6a4.jpg" alt="white dish with carbonara pasta with shavings of cheese on top, within of the pasta have a fork ready to be served.">
-        <h3>Description</h3>
-        <p>Spaghetti alla carbonara. Luscious and wonderfully indulgent, pasta carbonara takes as long to make as it does to cook the pasta.</p>
-        <p>The ingredients are simple—just spaghetti (or another long pasta), and the carbonara is made with pancetta or bacon, eggs, Parmesan,
-            a little olive oil, salt and pepper.</p> 
-        <p>The silky carbonara sauce is created when the beaten eggs are tossed with the hot pasta and a little fat from the pancetta or bacon.</p>
-    
-        <h4>Note:</h4>
-        <p>This recipe uses raw eggs, which are essentially cooked by tossing with hot pasta, just enough to thicken into a sauce.</p>
-        <p> The garlic is optional. It is not usually included in pasta carbonara, but it tastes great so we've included it. By the way, "guanciale", or pork jowl, is traditionally used in this dish, so if you can get it, by all means use it.</p>
-        <h3>Ingredients</h3>
+        <article class="description desc-carbo">
+            <h3>Description:</h3>
+            <p>Spaghetti alla carbonara. Luscious and wonderfully indulgent, pasta carbonara takes as long to make as it does to cook the pasta.
+            <br>The ingredients are simple—just spaghetti (or another long pasta), and the carbonara is made with pancetta or bacon, eggs, Parmesan,
+            a little olive oil, salt and pepper.
+            <br>The silky carbonara sauce is created when the beaten eggs are tossed with the hot pasta and a little fat from the pancetta or bacon.
+            <br>
+            <strong>Note:</strong>
+            <br>
+            This recipe uses raw eggs, which are essentially cooked by tossing with hot pasta, just enough to thicken into a sauce.
+            <br> The garlic is optional. It is not usually included in pasta carbonara, but it tastes great so we've included it. By the way, "guanciale", or pork jowl, is traditionally used in this dish, so if you can get it, by all means use it.</p>
+        </article>
+        <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li>1 tablespoon extra virgin olive oil or unsalted butter</li>
             <li>1/2 pound pancetta or thick cut bacon, diced</li>
@@ -31,7 +36,7 @@
             <li>1 pound spaghetti (or bucatini or fettuccine)</li>
             <li>Kosher salt and freshly ground black pepper to taste</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="steps">Steps</h3>
         <ol>
             <li>Heat the pasta water: Put a large pot of salted water on to boil (1 tablespoon salt for every 2 quarts of water.) Sauté the pancetta or bacon and garlic:</li>
             <li>While the water is coming to a boil, heat the olive oil or butter in a large sauté pan over medium heat. Add the bacon or pancetta and cook slowly until crispy. 
