--- a/recipes/rojoes_a_moda_do_minho.html
+++ b/recipes/rojoes_a_moda_do_minho.html
@@ -9,14 +9,20 @@
   </head>
   <body>
     <main>
-      <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
-      <h2>Rojões à moda do Minho</h2>
+      <article class="to-center">
+        <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
+      </article>
+      <h2 class="sub-title">Rojões à moda do Minho</h2>
       <img class="img-recipe" src="https://i.pinimg.com/564x/bf/f7/95/bff7951ec944c4afcc8bc12d2f804bdf.jpg" alt="a white dish with braised pork mixed with potatoes and olives on top.">
-      <h2>Description</h2>
-      <p>Rojões à moda do Minho, a traditional Minho cuisine recipe much appreciated by lovers of Portuguese gastronomy.</p>
-      <p>Dare to try it.</p>
-      <h3>Ingredients</h3>
-      <ul>
+      <article class="description desc-rojoes">
+        <h3>Description</h3>
+        <p>Rojões à moda do Minho, a traditional Minho cuisine recipe much appreciated by lovers of Portuguese gastronomy.</p>
+        <p>Dare to try it.</p>
+        <h5>Note:</h5>
+      <p>Rojões a moda do Minho are served on a platter with roast potatoes and garnished with slices of lemon and sprigs of parsley.</p>
+      </article>
+        <h3 class="ingredients">Ingredients</h3>
+        <ul>
           <li>800g pork leg without skin but with fat</li>
           <li>3.5dl green white wine</li>
           <li>3 tablespoons lard</li>
@@ -37,7 +43,7 @@
           <li>cumin</li>
           <li>2 lemon</li>
       </ul>
-      <h3>Steps</h3>  
+      <h3 class="steps">Steps</h3>  
       <ol>
           <li>Cut the pork into cubes about 10 cm square and marinate for 2 hours with the wine, crushed garlic cloves, salt, pepper and bay leaf.</li>
           <li>Bring to the boil (preferably in an iron pan) and cook over a high heat until the wine has evaporated.</li>
@@ -58,8 +64,7 @@
           <li>As these ingredients finish frying, they are added to the rojões to keep everything warm.</li>
           <li>The roasted chestnuts are also added, after being peeled.</li>
       </ol>
-      <h5>Note:</h5>
-      <p>Rojões a moda do Minho are served on a platter with roast potatoes and garnished with slices of lemon and sprigs of parsley.</p>
+      
     </main>
   </body>
 </html>
