--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,21 +9,26 @@
   </head>
   <body>
     <main>
-
-      
-      <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
-      <h2>Lasagna</h2>
+      <article class="to-center">
+        <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
+      </article>
+      <h2 class="sub-title">Lasagna</h2>
       <img class="img-recipe" src="https://i.pinimg.com/564x/db/58/cc/db58ccfbcf9d0a2968dcd9bccc9074d0.jpg" alt="White plate with a delicious piece of lasagna, a basil leaf on top and two cherry tomatoes on the bottom">
-      <h3>Description</h3>
-      <p>Lasagne is a type of pasta, possibly one of the oldest types, made in very wide, 
-          flat sheets. 
-          The same-named Italian dish is made of stacked layers of lasagna alternating 
-          with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, 
-          vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), 
-          and seasonings and spices.</p>
-  
-      <h3>Ingredients</h3>
-      <ul>
+      <article class="description">
+        <h3>Description</h3>
+        <p>Lasagna is a type of pasta, possibly one of the oldest types, made in very wide, flat sheets. 
+          The same-named Italian dish is made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), 
+          béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), and seasonings and spices.
+          <br>
+          This golden and succulent lasagna is composed of alternating layers of fresh pasta, robust and slightly sweet tomato sauce, 
+          seasoned ground meat with Italian herbs, and a generous amount of melted cheese. Each layer is carefully assembled, 
+          creating a harmonious combination of textures and flavors. The top crust, perfectly gratinated, 
+          has a golden hue, while the interior reveals creamy cheese and sauce that drips smoothly. 
+          The aroma of fresh basil and oregano fills the air, promising an irresistible culinary experience.
+        </p>    
+      </article>
+      <h3 class="ingredients">Ingredients</h3>
+      <ul class="divide">
           <li>1 packet lasagne</li>
           <li>3 yellow onions</li>
           <li>2 garlic cloves</li>
@@ -34,6 +39,8 @@
           <li>15cl water</li>
           <li>20 cl red wine</li>
           <li>2 bay leaves</li>
+      </ul>
+      <ul class="divide">
           <li>thyme</li>
           <li>basil</li>
           <li>3 pinches grated nutmeg</li>
@@ -45,7 +52,7 @@
           <li>125g butter</li>
           <li>1l milk</li>
       </ul>
-      <h3>Steps</h3>
+      <h3 class="steps">Steps</h3>
       <ol>
           <li>Sauté chopped garlic cloves and minced onions in a little olive oil.</li>
           <li>Add the chopped carrot and celery stalk, then the meat and sauté.</li>
